# pub-quiz-flashcards

./: .claudeignore  .gitattributes  .gitignore  CLAUDE.md  LOGBOOK.md  Makefile  README.md  log_usage.sh  make_anki_cards.py  pyproject.toml
.github/workflows/: publish.yml  scrape.yml
scrape/: CLAUDE.md  aggregate_topics.py  build_entities.py  build_topics.py  wikipedia_annotations.json  wikipedia_card_topics.json
scrape/le_jeu_des_1000_euros/: SKILL.md  episodes.json  list_episodes.py  questions.json  transcribe_episodes.py
scrape/the_guardian_weekly/: questions.json  scrape.py
sources/the_guardian_weekly/: SKILL.md  questions.json  scrape.py
web/: .gitignore  CLAUDE.md  build-data.ts  package-lock.json  package.json  svelte.config.js
web/src/: app.css  app.html
web/src/lib/: backup.ts  cards.ts  entities.ts  scheduler.ts  storage.ts  streak.ts  types.ts
web/src/lib/actions/: swipe.ts
web/src/lib/components/: Heatmap.svelte  Onboarding.svelte  RichText.svelte  SourcePill.svelte  SourceRow.svelte  Streak.svelte  Tooltip.svelte  TopicPill.svelte
web/src/lib/game/: distractors.ts  host.svelte.ts  player.svelte.ts  protocol.ts  scoring.ts
web/src/routes/: +page.svelte
web/src/routes/host/: +page.svelte
web/src/routes/play/: +page.svelte
web/src/routes/settings/: +page.svelte
web/static/: manifest.webmanifest
