[project]
name = "pub-quiz-flashcards"
version = "0.1.0"
description = "Pub quiz flashcards"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.33.1",
    "ruff>=0.12",
    "ty>=0.0.1a7",
    "pyahocorasick>=2.1",
    "wordfreq>=3.1",
    "mlx-whisper>=0.4",
]
